--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/node": "^8.11.0",
-    "@nrwl/workspace": "8.11.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "eslint": "6.1.0",
-    "prettier": "1.18.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "@nrwl/workspace": "^8.11.0",
+    "@types/node": "^12.0.0",
+    "dotenv": "^6.2.0",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.6.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   }
 }
