--- a/package.json
+++ b/package.json
@@ -35,6 +35,14 @@
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "@nrwl/eslint-plugin-nx": "^8.11.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "eslint-config-prettier": "^6.9.0",
+    "@nrwl/jest": "^8.11.0",
+    "jest": "^24.9.0",
+    "@types/jest": "^24.9.0",
+    "ts-jest": "^24.3.0"
   }
 }
