--- a/package.json
+++ b/package.json
@@ -27,22 +27,23 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nrwl/eslint-plugin-nx": "^8.11.0",
+    "@nrwl/jest": "^8.11.0",
     "@nrwl/node": "^8.11.0",
     "@nrwl/workspace": "^8.11.0",
+    "@types/jest": "^24.9.0",
     "@types/node": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "dotenv": "^6.2.0",
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
-    "ts-node": "^8.6.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
-    "@nrwl/eslint-plugin-nx": "^8.11.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
     "eslint-config-prettier": "^6.9.0",
-    "@nrwl/jest": "^8.11.0",
     "jest": "^24.9.0",
-    "@types/jest": "^24.9.0",
-    "ts-jest": "^24.3.0"
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.2",
+    "tslib": "^1.10.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   }
 }
