feat(builder-webpack): implement generic builder That can be configurable from outside. Also setup a build system that can compile packages in correct dependencies-wise order

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,15 @@
       {
         "allow": [],
         "depConstraints": [
+          { "sourceTag": "core", "onlyDependOnLibsWithTags": [] },
+          {
+            "sourceTag": "builder",
+            "onlyDependOnLibsWithTags": ["core", "builder"]
+          },
+          {
+            "sourceTag": "locator",
+            "onlyDependOnLibsWithTags": ["core", "locator"]
+          },
           { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
         ]
       }
