--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
+    "build:all": "npm run run-all -- build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
@@ -22,10 +23,14 @@
     "format:check": "nx format:check",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "run-all": "nx run-many --all --target"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "webpack": "^4.41.5",
+    "webpack-merge": "^4.2.2"
+  },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "^8.11.0",
     "@nrwl/jest": "^8.11.0",
@@ -33,6 +38,8 @@
     "@nrwl/workspace": "^8.11.0",
     "@types/jest": "^24.9.0",
     "@types/node": "^12.0.0",
+    "@types/webpack": "^4.41.2",
+    "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "dotenv": "^6.2.0",
