build(eslint): apply prettier rules via eslint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "nx build",
     "build:all": "npm run run-all -- build",
     "test": "nx test",
+    "test:all": "npm run run-all -- test",
     "lint": "nx workspace-lint && nx lint",
+    "lint:all": "nx workspace-lint && npm run run-all -- lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -45,6 +47,7 @@
     "dotenv": "^6.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.3.0",
