chore(nx): remove lib tags from projects As it is already understood and supported by the NX

--- a/nx.json
+++ b/nx.json
@@ -12,10 +12,10 @@
   },
   "projects": {
     "core": {
-      "tags": ["lib", "core"]
+      "tags": ["core"]
     },
     "builder-webpack": {
-      "tags": ["lib", "builder"]
+      "tags": ["builder"]
     }
   }
 }
