--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-parameter-properties": "off",
+    "import/namespace": 0,
     "import/order": [
       "error",
       {
