feat(builder-ng-webpack): implement basic building logic By extracting webpack config from angular builder and passing it down to webpack builder

--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,9 @@
     },
     "builder-webpack": {
       "tags": ["builder"]
+    },
+    "builder-ng-webpack": {
+      "tags": ["builder"]
     }
   }
 }
