--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/core": "^8.3.23",
     "webpack": "^4.41.5",
     "webpack-merge": "^4.2.2"
   },
