--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,10 @@
       "@zed-builder/builder-webpack": [
         "dist/libs/builder-webpack/index.d.ts",
         "libs/builder-webpack/src/index.d.ts"
+      ],
+      "@zed-builder/builder-ng-webpack": [
+        "dist/libs/builder-ng-webpack/index.d.ts",
+        "libs/builder-ng-webpack/src/index.ts"
       ]
     }
   },
