feat(core): add secondary entry point `testing` And allow it in eslint module boundaries rule to import

--- a/.eslintrc
+++ b/.eslintrc
@@ -52,7 +52,7 @@
     "@nrwl/nx/enforce-module-boundaries": [
       "error",
       {
-        "allow": [],
+        "allow": ["@zed-builder/core/testing"],
         "depConstraints": [
           { "sourceTag": "core", "onlyDependOnLibsWithTags": [] },
           {
