--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "baseUrl": ".",
     "paths": {
       "@zed-builder/core": [
-        "dist/libs/core/index.d.ts",
-        "libs/core/src/index.d.ts"
+        "dist/libs/core/src/index.d.ts",
+        "libs/core/src/index.ts"
       ],
+      "@zed-builder/core/*": ["dist/libs/core/*", "libs/core/*"],
       "@zed-builder/builder-webpack": [
         "dist/libs/builder-webpack/index.d.ts",
         "libs/builder-webpack/src/index.d.ts"
