--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,12 @@
       ],
       "@zed-builder/core/*": ["dist/libs/core/*", "libs/core/*"],
       "@zed-builder/builder-webpack": [
-        "dist/libs/builder-webpack/index.d.ts",
+        "dist/libs/builder-webpack/src/index.d.ts",
         "libs/builder-webpack/src/index.ts"
+      ],
+      "@zed-builder/builder-webpack/*": [
+        "dist/libs/builder-webpack/*",
+        "libs/builder-webpack/*"
       ],
       "@zed-builder/builder-ng-webpack": [
         "dist/libs/builder-ng-webpack/index.d.ts",
