--- a/libs/builder-webpack/tsconfig.lib.json
+++ b/libs/builder-webpack/tsconfig.lib.json
@@ -4,9 +4,9 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "rootDir": "./src",
-    "types": ["node"]
+    "rootDir": ".",
+    "types": ["node", "jest"]
   },
   "exclude": ["**/*.spec.ts"],
-  "include": ["src/index.ts"]
+  "include": ["src/index.ts", "testing/index.ts"]
 }
