style(lint): disable on spec files and test directories

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
+  "ignorePatterns": ["**/*.spec.ts", "**/test/"],
   "settings": {
     "import/parsers": {
       "@typescript-eslint/parser": [".ts", ".tsx"]
